; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/et/extr_if_et.c_et_ifmedia_upd.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/et/extr_if_et.c_et_ifmedia_upd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ifnet = type { %struct.et_softc* }
%struct.et_softc = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ifnet*)* @et_ifmedia_upd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @et_ifmedia_upd(%struct.ifnet* %0) #0 {
  %2 = alloca %struct.ifnet*, align 8
  %3 = alloca %struct.et_softc*, align 8
  %4 = alloca i32, align 4
  store %struct.ifnet* %0, %struct.ifnet** %2, align 8
  %5 = load %struct.ifnet*, %struct.ifnet** %2, align 8
  %6 = getelementptr inbounds %struct.ifnet, %struct.ifnet* %5, i32 0, i32 0
  %7 = load %struct.et_softc*, %struct.et_softc** %6, align 8
  store %struct.et_softc* %7, %struct.et_softc** %3, align 8
  %8 = load %struct.et_softc*, %struct.et_softc** %3, align 8
  %9 = call i32 @ET_LOCK(%struct.et_softc* %8)
  %10 = load %struct.ifnet*, %struct.ifnet** %2, align 8
  %11 = call i32 @et_ifmedia_upd_locked(%struct.ifnet* %10)
  store i32 %11, i32* %4, align 4
  %12 = load %struct.et_softc*, %struct.et_softc** %3, align 8
  %13 = call i32 @ET_UNLOCK(%struct.et_softc* %12)
  %14 = load i32, i32* %4, align 4
  ret i32 %14
}

declare dso_local i32 @ET_LOCK(%struct.et_softc*) #1

declare dso_local i32 @et_ifmedia_upd_locked(%struct.ifnet*) #1

declare dso_local i32 @ET_UNLOCK(%struct.et_softc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
